@@ -22,7 +22,6 @@ import org.springframework.http.MediaType;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
-import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.devstagram.domain.post.dto.PostCreateReq;
@@ -61,52 +60,44 @@ class PostControllerTest {
     private UserSecurityService userSecurityService;
 
     @MockitoBean
-    private Rq rq;
-
-    // [핵심 추가] 필터(CustomAuthenticationFilter)가 생성될 때 필요한 빈입니다.
-    @MockitoBean
     private PasswordEncoder passwordEncoder;
+
+    @MockitoBean
+    private Rq rq;
 
     @BeforeEach
     void setUp() {
-        // Rq 모킹
+
         given(rq.getHeader(eq("Authorization"), anyString())).willReturn("Bearer dummy");
         given(rq.getHeader(eq("X-API-KEY"), anyString())).willReturn("");
         given(rq.getCookieValue(anyString(), anyString())).willReturn("");
 
-        // JWT 모킹
+        // jwt
         given(jwtProvider.isValid(anyString())).willReturn(true);
         Claims mockClaims = mock(Claims.class);
         given(mockClaims.getSubject()).willReturn("1");
         given(jwtProvider.payload(anyString())).willReturn(mockClaims);
 
-        // User 객체 생성 및 ID 주입
-        User mockUser = User.builder().email("test@test.com").nickname("tester").build();
-        ReflectionTestUtils.setField(mockUser, "id", 1L);
+        // user
+        User mockUser = mock(User.class);
+        SecurityUser mockSecurityUser = mock(SecurityUser.class); // 가짜 SecurityUser 생성
 
-        // 서비스 응답 정의
         given(userSecurityService.findById(1L)).willReturn(mockUser);
+        given(userSecurityService.toSecurityUser(mockUser)).willReturn(mockSecurityUser);
 
-        SecurityUser mockSecurityUser = new SecurityUser(
-                1L,
-                "test@test.com",
-                "tester",
-                "hashedKey",
-                "password",
-                java.util.List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_USER")));
-        given(userSecurityService.toSecurityUser(any(User.class))).willReturn(mockSecurityUser);
-
-        // PasswordEncoder matches 모킹 (필요 시)
-        given(passwordEncoder.matches(anyString(), anyString())).willReturn(true);
+        given(mockSecurityUser.getPassword()).willReturn("");
+        given(mockSecurityUser.getAuthorities()).willReturn(java.util.Collections.emptyList());
     }
 
     @Test
     @WithMockUser
     @DisplayName("[게시글 생성 성공] - 201")
     void createPost_Success() throws Exception {
+        // given
         PostCreateReq req = new PostCreateReq("새 제목", "새 내용");
-        given(postService.createPost(any(PostCreateReq.class))).willReturn(1L);
+        given(postService.createPost(any(), any(PostCreateReq.class))).willReturn(1L);
 
+        // when & then
         mockMvc.perform(post("/api/posts")
                         .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
@@ -119,10 +110,13 @@ class PostControllerTest {
     @WithMockUser
     @DisplayName("[게시글 수정 성공] - 200")
     void updatePost_Success() throws Exception {
+        // given
         Long postId = 1L;
         PostUpdateReq updateReq = new PostUpdateReq("수정된 제목", "수정된 내용");
-        doNothing().when(postService).updatePost(eq(postId), any(PostUpdateReq.class));
 
+        doNothing().when(postService).updatePost(eq(1L), eq(postId), any(PostUpdateReq.class));
+
+        // when & then
         mockMvc.perform(put("/api/posts/{postId}", postId)
                         .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
@@ -137,9 +131,11 @@ class PostControllerTest {
     @WithMockUser
     @DisplayName("[게시물 삭제 성공] - 200")
     void deletePost_Success() throws Exception {
+        // given
         Long postId = 1L;
-        doNothing().when(postService).deletePost(postId);
+        doNothing().when(postService).deletePost(eq(1L), eq(postId));
 
+        // when & then
         mockMvc.perform(delete("/api/posts/{postId}", postId).with(csrf()))
                 .andDo(print())
                 .andExpect(status().isOk())
@@ -150,6 +146,7 @@ class PostControllerTest {
     @WithMockUser
     @DisplayName("[게시물 상세 조회 성공]")
     void getPostDetail_Success() throws Exception {
+        // given
         Long postId = 1L;
         LocalDateTime now = LocalDateTime.now();
 
@@ -164,6 +161,7 @@ class PostControllerTest {
 
         given(postService.getPostDetail(postId)).willReturn(response);
 
+        // when & then
         mockMvc.perform(get("/api/posts/{postId}", postId))
                 .andDo(print())
                 .andExpect(status().isOk())
@@ -179,6 +177,7 @@ class PostControllerTest {
     @WithMockUser
     @DisplayName("[게시물 피드 조회 성공]")
     void getPostFeed_Success() throws Exception {
+        // given
         LocalDateTime now = LocalDateTime.now();
 
         List<PostFeedRes> content = List.of(
@@ -204,6 +203,7 @@ class PostControllerTest {
 
         given(postService.getPostFeed(any(Pageable.class))).willReturn(sliceResponse);
 
+        // when & then
         mockMvc.perform(get("/api/posts").param("page", "0").param("size", "10").param("sort", "createdAt,desc"))
                 .andDo(print())
                 .andExpect(status().isOk())
